--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wrold_clock App</title>
+    <title>World_clock App</title>
   </head>
   <body>
-    <div id="root1"></div>
-    <script type="module" src="./src/main.jsx"></script> 
+    <div id="root_123"></div>
+    <script type="module" src="./src/main.jsx"></script> <!--ES6-->
   </body>
 </html>
